# mp4

./: .replit  README.md  main.py  pyproject.toml  replit.nix  requirements.txt
static/: script.js  style.css
templates/: index.html
