[tool.poetry]
name = "stompzone-mp4"
version = "1.1.2-beta"
description = "StompZone-MP4"
authors = ["DJ Stomp <djstomp@djstomp.net>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
yt-dlp = "^2023.3.4"
youtube_dl = "^2021.12.17"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
